{
    "name": "GameInput",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "6fcade0a-afd6-4c03-ab22-71142a224dd3",
            "actions": [
                {
                    "name": "KeyboardMovementAction",
                    "type": "Value",
                    "id": "302e3569-dc3c-4929-9dcf-825880be2978",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchContact",
                    "type": "PassThrough",
                    "id": "e83ea3a8-f7c1-4c55-90f2-eef062b2f8fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchMovementAction",
                    "type": "PassThrough",
                    "id": "989730d0-2879-4247-976d-fefde011196b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "8c371ea2-f097-4a38-9889-af9978839a81",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMovementAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "00c65fb8-c673-4025-90f4-25ac235e5b92",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6f21e29f-c35a-4e96-a8f2-f37793848f40",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "303e75ff-43b8-427a-84a0-d2ef39f1229b",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e55f87d-8df6-47b2-95f3-d5675fb5f518",
                    "path": "<Touchscreen>/position",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMovementAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}